# GHG_Protocol_Calculation_desktop

./: .gitignore  README.md  package-lock.json  package.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: config.ts  excelCsv.ts  licenseClient.ts  licenseGate.ts  main.tsx  projectStorage.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: DesktopEmissionSourceCard.tsx  DesktopFactorManager.tsx  DesktopResultsDisplay.tsx  DesktopScopeCalculators.tsx  IconComponents.tsx
apps/license-admin/: .env.example  package.json  tsconfig.tsbuildinfo
apps/license-admin/db/: schema.sql
apps/license-admin/src/app/: layout.tsx  page.tsx  styles.css
apps/license-admin/src/app/api/admin/licenses/: route.ts
apps/license-admin/src/app/api/licenses/verify/: route.ts
apps/license-admin/src/app/api/updates/latest/: route.ts
apps/license-admin/src/app/download/: page.tsx
apps/license-admin/src/app/lib/: postgres-store.ts  release-store.ts  seed-store.ts  types.ts
docs/: calculation-parity-plan.md  chapter9-field-mapping.md  data-boundary-policy.md  development-plan.md  download-page-copy-ko.md  license-admin-storage-plan.md  local-sqlite-storage.md  report-engine-plan.md  unsigned-beta-release-ops.md  vercel-neon-postgres-setup.md  web-desktop-parity-plan.md
