[package]
name = "ghg-desktop"
version = "0.1.0"
description = "Local-first GHG Protocol Scope 1/2 desktop app"
authors = ["OpenBrain Inc."]
edition = "2021"

[lib]
name = "ghg_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
